Add time summary toggle functionality and responsive styles

--- a/Timekeeper.Api/wwwroot/index.html
+++ b/Timekeeper.Api/wwwroot/index.html
@@ -232,8 +232,13 @@
         </div>
     </div>
 
+    <!-- Time Summary Toggle Button -->
+    <button id="summary-toggle" class="summary-toggle active" onclick="toggleTimeSummary()" title="Toggle Time Summary">
+        📊
+    </button>
+
     <!-- Time Summary Widget -->
-    <div class="time-summary">
+    <div id="time-summary" class="time-summary">
         <h3>⏱️ Time Summary</h3>
         <div class="summary-item">
             <div class="summary-label">Today</div>
